<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_white">

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/login_user_icon_iv"
        android:layout_width="@dimen/dp_40"
        android:layout_height="@dimen/dp_40"
        android:layout_marginStart="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_20"
        android:adjustViewBounds="true"
        android:minHeight="@dimen/dp_30"
        android:minWidth="@dimen/dp_30"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_30"
        android:text="@string/tips_login_title"
        android:textSize="@dimen/sp_18"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_user_icon_iv" />

    <TextView
        android:id="@+id/login_register_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/tips_new_user_register"
        android:textSize="@dimen/sp_12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_username_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/tips_login_phone"
        android:textSize="@dimen/sp_10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_title_tv" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/login_username_cl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:layout_marginTop="@dimen/dp_4"
        app:layout_constraintTop_toBottomOf="@+id/login_username_tv">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/login_username_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/dp_30"
            android:layout_marginStart="@dimen/dp_30"
            android:background="@null"
            android:ellipsize="end"
            android:hint="@string/hint_please_input_username"
            android:imeOptions="actionNext"
            android:maxLength="30"
            android:maxLines="1"
            android:nextFocusForward="@+id/login_et_pwd"
            android:singleLine="true"
            android:textSize="@dimen/sp_16">

            <requestFocus />
        </android.support.v7.widget.AppCompatEditText>

        <ImageView
            android:id="@+id/login_clear_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:maxHeight="@dimen/dp_24"
            android:maxWidth="@dimen/dp_24"
            android:src="@drawable/selector_username_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="@+id/login_username_et"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/login_password_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/tips_Login_password"
        android:textSize="@dimen/sp_10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_username_cl" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/login_password_cl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:layout_marginTop="@dimen/dp_4"
        app:layout_constraintTop_toBottomOf="@+id/login_password_tv">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/login_password_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/dp_30"
            android:layout_marginStart="@dimen/dp_30"
            android:background="@null"
            android:ellipsize="end"
            android:hint="@string/hint_please_input_password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLength="30"
            android:maxLines="1"
            android:nextFocusForward="@+id/login_et_pwd"
            android:singleLine="true"
            android:textSize="@dimen/sp_16">

        </android.support.v7.widget.AppCompatEditText>

        <CheckBox
            android:id="@+id/login_password_cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/selector_password_cb"
            android:checked="false"
            android:gravity="center_vertical|end"
            android:maxHeight="@dimen/dp_24"
            android:maxWidth="@dimen/dp_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="@+id/login_password_et"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlHardcodet,RtlSymmetry" />
    </android.support.constraint.ConstraintLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_marginEnd="@dimen/dp_30"
        android:layout_marginStart="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@drawable/selector_login_btn"
        android:text="@string/action_login_with_space"
        android:textColor="@color/md_white"
        app:layout_constraintTop_toBottomOf="@+id/login_password_cl" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_6"
        android:text="@string/tips_login_forget"
        android:textSize="@dimen/sp_10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_btn" />

</android.support.constraint.ConstraintLayout>